--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
@@ -3,4 +3,12 @@
 {% block add_button_link %}{% url 'phison_panel:new_buyer' %}{% endblock %}
 {% block add_button_label %}Add buyer{% endblock %}
 {% block header_description %}All of your buyers{% endblock %}
+{% block filter_options %}
+<li>
+  <button type="submit" name="filter_by" class="text-left block w-full py-2 px-4 hover:bg-gray-100 {% if filter_by == "AP" %}text-gray-400{% endif %}" value="AP" {% if filter_by == "AP" %}disabled{% endif %}>Apartment Only</button>
+</li>
+<li>
+  <button type="submit" name="filter_by" class="text-left block w-full py-2 px-4 hover:bg-gray-100 {% if filter_by == "VI" %}text-gray-400{% endif %}" value="VI" {% if filter_by == "VI" %}disabled{% endif %}>Villa Only</button>
+</li>
+{% endblock %}
 {% block card %}{% include 'partials/_buyer_card.html' with buyer=buyer %}{% endblock %}
