--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/staff_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/staff_list.html
@@ -1,6 +1,5 @@
 {% extends 'phison_panel/base_list.html' %}
 {% block header_title %}Staff List{% endblock %}
-{% block add_button_link %}{% url 'phison_panel:new_buyer' %}{% endblock %}
 {% block add_button_label %}Add Staff{% endblock %}
 {% block header_description %}All of your staff members{% endblock %}
 {% block filter_options %}
@@ -12,3 +11,18 @@
 </li>
 {% endblock %}
 {% block card %}{% include 'partials/_buyer_card.html' with buyer=buyer %}{% endblock %}
+{% block inline_javascript %}
+{{block.super}}
+<script type="module">
+  import { showDialog, renderDjangoTemplate } from "/static/js/utils.js";
+
+  window.addEventListener('DOMContentLoaded', () => {
+    const addStaffButton = document.querySelector('#addButton');
+    addStaffButton.addEventListener("click", async (event) => {
+      event.preventDefault();
+      const template = await renderDjangoTemplate('_staff_form.html');
+      showDialog('Add Staff Member', template);
+    });
+  });
+</script>
+{% endblock inline_javascript %}
