--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_staff_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_staff_card.html
@@ -9,8 +9,8 @@
     src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
     alt="Buyer profile picture">
 
-    <p class="mt-2 font-semibold">Miss Ian Starke</p>
-    <p class="text-sm text-gray-500">548-970-5880</p>
-    <p class="text-sm text-gray-500">Jeanette49@yahoo.com</p>
+    <p class="mt-2 font-semibold">{{staff.name}}</p>
+    <p class="text-sm text-gray-500">{{staff.phone_number}}</p>
+    <p class="text-sm text-gray-500">{{staff.email}}</p>
   </div>
 </div>
