--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base_list.html
@@ -75,7 +75,7 @@
   {% endif %}
 
   <div class="flex flex-wrap items-stretch gap-y-6 mt-2">
-    {% for buyer in object_list %}
+    {% for item in object_list %}
       <div class="pr-3 basis-1/2 md:basis-1/3 lg:basis-1/4 md:flex-grow-0 items-stretch flex-shrink">
         {% block card %} {% endblock %}
       </div>
