--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
@@ -11,4 +11,4 @@
   <button type="submit" name="filter_by" class="text-left block w-full py-2 px-4 hover:bg-gray-100 {% if filter_by == 'VI' %}text-gray-400{% endif %}" value="VI" {% if filter_by == 'VI' %}disabled{% endif %}>Villa Only</button>
 </li>
 {% endblock %}
-{% block card %}{% include 'partials/_buyer_card.html' with buyer=buyer %}{% endblock %}
+{% block card %}{% include 'partials/_buyer_card.html' with buyer=item %}{% endblock %}
