--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -1,5 +1,12 @@
 {% extends "phison_panel/base.html" %}
 {% load static %}
+
+{% block javascript %}
+{{block.super}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+{{form.media}}
+{% endblock %}
+
 {% block main %}
 <div>
   <h2 class="font-semibold text-xl">Add New Property</h2>
@@ -61,8 +68,20 @@
           {% include 'partials/_input.html' with label="Property pricing ($)" id="property_pricing" name="price" placeholder="2000.00" type="number" value=form.price.value required_attribute="required" step_attribute="step='0.1'" only %}
           {% include 'partials/_checkbox.html' with label="Featured property" id="property_is_featured" name="is_featured" only %}
         </div>
-        {% include 'partials/_input.html' with label="Property location" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" only %}
         {% include 'partials/_textarea.html' with label="Property description" id="property_description" name="description" placeholder="Property description" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.description.value required_attribute="required" only %}
+    </div>
+  </div>
+
+  <div class="mt-4">
+    <h5 class="font-semibold mb-4">Property Location</h5>
+    <hr>
+    <div class="mt-4">
+      <div class="flex">
+        {% include 'partials/_input.html' with label="Address" id="id_address" name="address" placeholder="Addis Ababa" type="text" value=form.city.value required_attribute="required" only %}
+      </div>
+
+      {{form.location}}
+
     </div>
   </div>
 
@@ -134,4 +153,13 @@
 {% endblock %}
 {% block inline_javascript %}
 <script defer src="{% static 'js/property_form.js' %}" type="module"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const locationInput = document.querySelector('#id_location');
+    locationInput.style.visibility = "hidden";
+    locationInput.style.height = 0;
+    locationInput.style.padding = 0;
+    locationInput.style.border = 0;
+  });
+</script>
 {% endblock %}
