Chore in _image_upload.html template

--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_image_upload.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_image_upload.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="relative flex-shrink-0 w-32 h-32 mr-2">
+<div class="relative flex-shrink-0 w-32 h-32 mr-2 mb-2">
   <img id="propertyImage" class="object-cover rounded-2xl h-full w-full blur-sm" src="{% static 'images/property-placeholder.png' %}"
     alt="property image">
   <button id="removePropertyImage" class="flex items-center justify-center bg-white w-6 h-6 absolute top-2 right-2 rounded-md">
