--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load humanize %}
 <div class="bg-white rounded-2xl p-2 shadow-lg hover:shadow-xl group relative h-full">
   <a href="{{property.get_absolute_url}}">
     <div class="relative -mx-2 -mt-2">
@@ -8,31 +7,7 @@
     </div>
     <h3 class="mt-3 font-semibold" id="propertyCardName">{{property.name}}</h3>
 
-    <div class="mt-1 mb-12 flex flex-wrap justify-between">
-      <div class="flex md:flex-col md:basis:1/3 flex-grow md:flex-grow-0">
-        <div class="flex">
-          <img class="mr-2 w-6 h-6" src="{% static 'images/bedroom.svg' %}" alt="bedroom icon">
-          <span id="propertyCardBedRoomCount" class="text-xs font-semibold mr-1">{{property.bed_room_count}}</span>
-        </div>
-        <p class="text-xs text-gray-500">Bedrooms</p>
-      </div>
-
-      <div class="flex md:flex-col md:basis:1/3 flex-grow md:flex-grow-0">
-        <div class="flex">
-          <img class="mr-2 w-6 h-6" src="{% static 'images/bathroom.svg' %}" alt="bathroom icon">
-          <span id="propertyCardBathRoomCount" class="text-xs font-semibold mr-1">{{property.bath_room_count}}</span>
-        </div>
-        <p class="text-xs text-gray-500">Bathrooms</p>
-      </div>
-
-      <div class="flex md:flex-col md:basis:1/3 flex-grow md:flex-grow-0">
-        <div class="flex">
-          <img class="mr-2 w-5 h-5" src="{% static 'images/area.svg' %}" alt="bathroom icon">
-          <span id="propertyCardParkingCount" class="ml-1 text-xs font-semibold mr-1">{{ property.size | floatformat:2 | intcomma }}</span>
-        </div>
-        <p class="text-xs text-gray-500">Area(m<sup>2</sup>)</p>
-      </div>
-    </div>
+    {% include 'partials/_property_stats.html' with property=property class="mt-1 mb-12 " %}
 
     <div class="bg-gray-100 text-xs text-gray-700 rounded-2xl p-2 flex items-center group-hover:bg-black group-hover:text-white absolute bottom-0 right-0 left-0">
       <div class="rounded-full p-2 bg-white">
