--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
@@ -3,7 +3,7 @@
   <a href="{{property.get_absolute_url}}">
     <div class="relative -mx-2 -mt-2">
       <img class="w-full object-cover rounded-2xl h-36" src="{% if property.property_image %}{% get_media_prefix %}{{property.property_image}}{% else %} https://cdn.pixabay.com/photo/2015/10/20/18/57/furniture-998265_960_720.jpg {% endif %}" alt="Property image">
-      <span class="absolute right-2 bottom-2 text-xs backdrop-blur-lg text-white p-2 rounded-lg group-hover:bg-orange-900">Apartment</span>
+      <span class="absolute right-2 bottom-2 text-xs backdrop-blur-lg text-white p-2 rounded-lg group-hover:bg-orange-900">{{property.get_property_type_display}}</span>
     </div>
     <h3 class="mt-3 font-semibold" id="propertyCardName">{{property.name}}</h3>
 
