--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -56,6 +56,7 @@
         {% include 'partials/_input.html' with label="Number of parkings" id="property_parking_count" name="parking_count" placeholder="1" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.parking_count.value min=0 required_attribute="required" only %}
         {% include 'partials/_input.html' with label="Property size (M<sup>2</sup>)" id="property_size" name="size" placeholder="74.47" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.size.value required_attribute="required" step_attribute="step='any'" required_attribute="required" only %}
         {% include 'partials/_input.html' with label="Property Video" id="property_video" name="video" placeholder="https://www.youtube.com/watch?v=xGVxYZClIwU" type="url" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.video.value only%}
+        {% include 'partials/_select.html' with label="Property Type" id="property_type" name="property_type" options="<option value='AP'>Apartment</option><option value='VI'>Villa</option>" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.property_type.value only%}
         <!-- TODO: Implement Location selection field -->
         <div class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow">
           <!-- prettier-ignore -->
