Show stats on property list page

--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_list.html
@@ -15,7 +15,7 @@
         </svg>
       </div>
       <div class="ml-2">
-        <h3 class="font-medium">25</h3>
+        <h3 class="font-medium">{{property_count}}</h3>
         <p class="text-gray-400 text-sm font-medium">Total Properties</p>
       </div>
     </div>
@@ -32,7 +32,7 @@
         </svg>
       </div>
       <div class="ml-2">
-        <h3 class="font-medium">25</h3>
+        <h3 class="font-medium">{{customer_count}}</h3>
         <p class="text-gray-400 text-sm font-medium">Total Customers</p>
       </div>
     </div>
@@ -48,7 +48,7 @@
         </svg>
       </div>
       <div class="ml-2">
-        <h3 class="font-medium">12</h3>
+        <h3 class="font-medium">{{buyer_count}}</h3>
         <p class="text-gray-400 text-sm font-medium">Properties Sold</p>
       </div>
     </div>
