--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
@@ -184,6 +184,11 @@
     function showSlides(n) {
       let i;
       let slides = document.getElementsByClassName("imageSlide");
+
+      if (slides.length <= 0) {
+        return;
+      }
+
       if (n > slides.length) {slideIndex = 1}
       if (n < 1) {slideIndex = slides.length}
       for (i = 0; i < slides.length; i++) {
