--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -9,8 +9,10 @@
 
 {% block main %}
 <div>
-  <h2 class="font-semibold text-xl">Add New Property</h2>
-  <p class="mt-2 text-gray-500 text-xs">Fill out the following information to add a new property</p>
+  <h2 class="font-semibold text-xl">{% if object %}Edit Property{% else %}Add New Property{% endif %}</h2>
+  <p class="mt-2 text-gray-500 text-xs">Fill out the following information to
+    {% if object %}edit a{% else %}add a new{% endif %}
+    property</p>
   <hr class="mt-3">
 </div>
 
@@ -19,13 +21,19 @@
     <h5 class="font-semibold mb-4">Property Images</h5>
 
     <div class="flex flex-wrap">
-      <div class="flex flex-wrap" id="propertyImages"></div>
+      <div class="flex flex-wrap" id="propertyImages">
+        {% for image in object.images.all %}
+          <div class="image-container" data-index="{{forloop.counter0}}">
+            {% include 'partials/_image_upload.html' with image=image %}
+          </div>
+        {% endfor %}
+      </div>
 
       <input id="imageInput" type="file" hidden accept="image/*">
 
       <button
         id="openImagePicker"
-        class="flex-shring-0 border border-dashed border-gray-400 w-32 h-32 flex justify-center items-center rounded-2xl {% if image_formset.non_form_errors %} border-red-500 {% endif %}">
+        class="flex-shring-0 border border-dashed border-gray-400 w-32 h-32 flex justify-center items-center rounded-2xl {% if image_formset.non_form_errors %} border-red-500 {% endif %} {% if object and object.images.count > 3 %}hidden{% endif %}">
         <img src="{% static 'images/add.svg' %}" alt="add image">
       </button>
     </div>
@@ -43,6 +51,11 @@
   {{image_formset.management_form}}
 
   <div id="propertyImageFormControls">
+    {% if object.images.count > 0 %}
+      {% for formset in image_formset %}
+        {{formset}}
+      {% endfor %}
+    {% endif %}
   </div>
 
   <div class="mt-4">
@@ -57,7 +70,6 @@
         {% include 'partials/_input.html' with label="Property size (M<sup>2</sup>)" id="property_size" name="size" placeholder="74.47" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.size.value required_attribute="required" step_attribute="step='any'" required_attribute="required" only %}
         {% include 'partials/_input.html' with label="Property Video" id="property_video" name="video" placeholder="https://www.youtube.com/watch?v=xGVxYZClIwU" type="url" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.video.value only%}
         {% include 'partials/_select.html' with label="Property Type" id="property_type" name="property_type" options="<option value='AP'>Apartment</option><option value='VI'>Villa</option>" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.property_type.value only%}
-        <!-- TODO: Implement Location selection field -->
         <div class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow">
           <!-- prettier-ignore -->
           {% include 'partials/_input.html' with label="Property progress" id="property_progress" name="progress" placeholder="1st Phase" type="text" value=form.progress.value required_attribute="required" only %}
@@ -78,7 +90,7 @@
     <hr>
     <div class="mt-4">
       <div class="flex">
-        {% include 'partials/_input.html' with label="Address" id="id_address" name="address" placeholder="Addis Ababa" type="text" value=form.city.value required_attribute="required" only %}
+        {% include 'partials/_input.html' with label="Address" id="id_address" name="address" placeholder="Addis Ababa" type="text" value=form.address.value required_attribute="required" only %}
       </div>
 
       {{form.location}}
