--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_checkbox.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_checkbox.html
@@ -1,6 +1,6 @@
 <div class="flex items-start {{class}}">
   <div class="flex items-center h-5">
-    <input id="{{id}}" type="checkbox" name="{{name}}"
+    <input id="{{id}}" type="checkbox" name="{{name}}" {% if checked_attribute %}checked{% endif %}
       class="w-4 h-4 bg-gray-50 rounded border border-gray-300 focus:ring-3 focus:ring-blue-300">
   </div>
   <label for="{{id}}" class="ml-2 text-sm font-medium text-gray-900">{{label}}</label>
