--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_detail.html
@@ -25,6 +25,17 @@
     </div>
 
     <p class="text-xs text-gray-500 mt-3">Property Detail Information</p>
+
+    {% if object.is_featured %}
+    <div class="flex p-4 text-sm bg-gray-100 rounded-lg text-gray-600 mt-3" role="alert">
+      <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+      <span class="sr-only">Info</span>
+      <div>
+        <span class="font-medium">Featured Property!</span> This is a featured property.
+      </div>
+    </div>
+    {% endif %}
+
   </header>
 
   <div class="mt-2 lg:flex gap-4">
@@ -110,6 +121,12 @@
       <div class="mt-5 flex items-center">
         <p class="font-semibold tex-sm basis-28">Status</p>
         <p class="text-gray-600 text-xs">{{object.progress}}</p>
+      </div>
+
+      <!-- Property Type -->
+      <div class="mt-5 flex items-center">
+        <p class="font-semibold tex-sm basis-28">Type</p>
+        <p class="text-gray-600 text-xs">{{object.get_property_type_display}}</p>
       </div>
 
       <!-- Progress -->
